templates/mattermost-instance_template.yaml
---
# Source: mattermost-instance/charts/postgres-instance/templates/postgres-exporter-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-exporter
  namespace: default
  labels:
    postgres-operator.crunchydata.com/cluster: postgres
    postgres-operator.crunchydata.com/crunchy-postgres-exporter: "true"
spec:
  ports:
    - name: exporter
      protocol: TCP
      port: 9187
      targetPort: 9187
  selector:
    postgres-operator.crunchydata.com/cluster: postgres
    postgres-operator.crunchydata.com/crunchy-postgres-exporter: "true"
---
# Source: mattermost-instance/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: stakater 
  namespace: default
spec:
  host: stakater-mattermost-instance.apps.devtest.vxdqgl7u.kubeapp.cloud 
  to:
    kind: Service
    name: stakater-mattermost 
    weight: 100
  port:
    targetPort: app
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
